<resources>
    <string name="app_name">Instagram</string>
    <string name="enter_caption">Add a caption</string>
    <string name="upload">Upload</string>
    <string name="twitter">Twitter</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="followInstagram">Follow @instagram?</string>
    <string name="followInstagramBlog">Follow blog.instagram.com</string>
    <string name="done">Done</string>
    <string name="done_exclamation">Done!</string>
    <string name="connectTwitter">Connect your Twitter account</string>
    <string name="enable_geotag">Enable Geotag</string>
    <string name="geotagged">Geotagged</string>
    <string name="nearby">Nearby</string>
    <string name="locating">Locating...</string>
    <string name="location">Location</string>
    <string name="add_people">Add People</string>
    <string name="optional">optional</string>
    <string name="name_this_location">Name this location</string>
    <string name="foursquare">Foursquare</string>
    <string name="tumblr">Tumblr</string>
    <string name="sharing">Sharing</string>
    <string name="facebook">Facebook</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="check_for_updates">Check for updates</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="tap_to_reload">"Couldn't load image. Tap to retry."</string>
    <string name="popular">Popular</string>
    <string name="back">Back</string>
    <string name="Feed">Feed</string>
    <string name="explore">Explore</string>
    <string name="News">News</string>
    <string name="Profile">Profile</string>
    <string name="like">Like</string>
    <string name="options">Options</string>
    <string name="comment">Comment</string>
    <string name="could_not_refresh_feed">"Couldn't refresh feed"</string>
    <string name="posts">posts</string>
    <string name="following">following</string>
    <string name="followers">followers</string>
    <string name="following_button_following">Following</string>
    <string name="following_button_requested">Requested</string>
    <string name="following_button_follow">Follow</string>
    <string name="loading">Loading...</string>
    <string name="you_are_following_this_user">You are following this user</string>
    <string name="this_user_is_private">This user is private.</string>
    <string name="you_are_not_following_this_user">You are not following this user</string>
    <string name="user_not_found">User not found</string>
    <string name="create_a_custom_location">Create a custom location</string>
    <string name="search_places_nearby">Search more places nearby</string>
    <string name="delete_media">Delete</string>
    <string name="tap_to_focus">Tap to focus</string>
    <string name="image_file_name_format">"'IMG'_yyyyMMdd_HHmmss"</string>
    <string name="dialog_ok">OK</string>
    <string name="cannot_connect_camera">Cannot connect to camera.</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_flash_mode_off">off</string>
    <string name="pref_camera_flash_mode_on">on</string>
    <string name="pref_camera_flash_mode_auto">auto</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_focusmode_default">continuous-picture</string>
    <string name="no_storage">Please insert an SD card before using the camera.</string>
    <string name="not_enough_space">Your SD card is full.</string>
    <string name="preparing_sd">Preparing...</string>
    <string name="access_sd_fail">"Couldn't access SD card."</string>
    <string name="news_view_action_bar_following_button">Following</string>
    <string name="news_view_action_bar_you_button">You</string>
    <string name="number_of_people_who_like_this_photo">%s likes</string>
    <string name="seconds_abbreviation_with_placeholder">%ds</string>
    <string name="minutes_abbreviation_with_placeholder">%dm</string>
    <string name="hours_abbreviation_with_placeholder">%dh</string>
    <string name="days_abbreviation_with_placeholder">%dd</string>
    <string name="weeks_abbreviation_with_placeholder">%dw</string>
    <string name="view_all_x_comments">view all %s comments</string>
    <string name="follow_all">Follow All</string>
    <string name="followers_title">Followers</string>
    <string name="following_title">Following</string>
    <string name="likers_title">Likers</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Try again</string>
    <string name="find_friends_menu_label">Find Friends</string>
    <string name="find_friends_item_from_my_contact_list">From my contact list</string>
    <string name="find_friends_item_facebook_friends">Facebook friends</string>
    <string name="find_friends_item_twitter_friends">Twitter friends</string>
    <string name="find_friends_item_search_names_and_usernames">Search names and usernames</string>
    <string name="find_friends_item_suggested_users">Suggested users</string>
    <string name="search_address_book_for_friends">Find friends from my contact list</string>
    <string name="skip">Skip</string>
    <string name="confirm_find_friends">"In order to find your friends, we need to send address book information to Instagram's servers using a secure connection."</string>
    <string name="allow">Allow</string>
    <string name="button_text_next">Next</string>
    <string name="load_more">Load more</string>
    <string name="all_items_loaded">All items loaded</string>
    <string name="find_friends_on_instagram">Find friends on Instagram</string>
    <string name="find_friends_subheader">Follow friends to see their photos and videos here.</string>
    <string name="alert_dialog_ok">OK</string>
    <string name="open_in_maps">Open in Maps?</string>
    <string name="open">Open</string>
    <string name="photo_options">Photo Options</string>
    <string name="report_inappropriate">Report Inappropriate</string>
    <string name="copy_share_url">Copy Share URL</string>
    <string name="share">Share</string>
    <string name="sharing_disabled">Sharing Disabled</string>
    <string name="share_url_has_been_copied">"This photo's sharable link has been copied to the clipboard."</string>
    <string name="reason_for_reporting">Reason for reporting</string>
    <string name="flag_reason_remove_from_popular">Remove from Popular</string>
    <string name="flag_comment_title">You may report a comment for spam or obscenity</string>
    <string name="flag_comment_second_step_title">Why are you reporting this comment?</string>
    <string name="flag_comment_option_spam">Spam or Scam</string>
    <string name="flag_comment_option_abuse">Abusive Content</string>
    <string name="flag_report_abuse">Report Abuse</string>
    <string name="we_will_review_this_comment_asap">Thanks, we will review this comment.</string>
    <string name="we_will_review_this_photo_asap">"We'll review this photo as soon as possible."</string>
    <string name="we_will_review_this_user_asap">"We'll review this user as soon as possible."</string>
    <string name="error">Error</string>
    <string name="could_not_submit_flag">"We couldn't submit your flag at the moment. Please try again in a minute."</string>
    <string name="dismiss">Dismiss</string>
    <string name="thanks">Thanks</string>
    <string name="why">Why?</string>
    <string name="submit">Submit</string>
    <string name="menu_label_block_user">Block User</string>
    <string name="menu_label_unblock_user">Unblock User</string>
    <string name="find_friends">Find friends</string>
    <string name="invite_friends">Invite friends</string>
    <string name="search_instagram">Search Instagram</string>
    <string name="posts_you_liked">"Posts You've Liked"</string>
    <string name="edit_profile">Edit profile</string>
    <string name="private_information">Private Information</string>
    <string name="edit_sharing_settings">Sharing Settings</string>
    <string name="push_notification_settings">Push Notification Settings</string>
    <string name="notifications">Notifications</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="change_password">Change Password</string>
    <string name="saving">Saving...</string>
    <string name="password_changed">Your password was changed.</string>
    <string name="log_out">Log Out</string>
    <string name="posts_are_private">Posts are Private</string>
    <string name="about">About</string>
    <string name="x_problems">%s seems to be having problems right now. Please try again in a few moments.</string>
    <string name="instagram">Instagram</string>
    <string name="user_blocked">User blocked</string>
    <string name="user_unblocked">User unblocked</string>
    <string name="yes_im_sure">"Yes, I'm sure"</string>
    <string name="x_wants_to_follow_you">%s wants to follow you</string>
    <string name="approve">Approve</string>
    <string name="ignore">Ignore</string>
    <string name="APPIRATER_MESSAGE">"If you enjoy using %s, would you mind taking a moment to rate it? It won't take more than a minute. Thanks for your support!"</string>
    <string name="APPIRATER_MESSAGE_TITLE">Rate %s</string>
    <string name="APPIRATER_CANCEL_BUTTON">No, Thanks</string>
    <string name="APPIRATER_RATE_BUTTON">Rate %s</string>
    <string name="APPIRATER_RATE_LATER">Remind me later</string>
    <string name="ok">Ok</string>
    <string name="toggle_privacy_help">"Toggle to require authorization before anyone can follow you. Your existing followers won't be affected."</string>
    <string name="name">Name</string>
    <string name="website">Website</string>
    <string name="bio">Bio</string>
    <string name="instagram_help_center">Instagram Help Center</string>
    <string name="crop_text_save">Save</string>
    <string name="flickr">Flickr</string>
    <string name="share_likes_on_facebook">Share Likes on Facebook?</string>
    <string name="facebook_explanation_pt1">"Now that you've connected to Facebook, you can also share the posts you like on Instagram to your Facebook Timeline."</string>
    <string name="facebook_explanation_pt2">Do you want to share to Facebook whenever you like a post on Instagram?</string>
    <string name="facebook_settings_message">You can always change your mind and modify your preferences in Sharing Settings in your Profile.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="photo_map">Photo Map</string>
    <string name="popup_photomaps_confirm_geotag_headerliner">A fun, new way of browsing photos on a map</string>
    <string name="popup_photomaps_empty_map_line_1">"Your Photo Map is currently empty because you haven't geotagged any photos."</string>
    <string name="popup_photomaps_empty_map_line_2">Choose \"Add to your Photo Map\" when sharing photos to browse them here.</string>
    <string name="find_facebook_friends">Find Your Facebook Friends</string>
    <string name="username_or_email">Username or Email</string>
    <string name="email_sent">"An email has been sent to your account's email address. Please check your email to continue. If you are still having problems, please visit: %s"</string>
    <string name="other_issues">Other Issues</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="new_password_again">New password, again</string>
    <string name="enter_email_address">Enter your Instagram username or the email address associated with your account.</string>
    <string name="please_choose_how_you_would_like_to_reset_your_password">"Please choose how you'd like to reset your password:"</string>
    <string name="reset_using_facebook">Reset using Facebook</string>
    <string name="search">Search</string>
</resources>