<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="top" android:orientation="vertical" android:background="@color/metadata_background" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/enter_email_address" style="@style/SignupFormText" />
    <EditText android:id="@id/fragment_lookup_edittext" android:background="@drawable/input_single" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/username_or_email" android:capitalize="none" android:drawableLeft="@drawable/accounts_glyph_username_default" android:inputType="textEmailAddress" style="@style/ButtonWithGylphAlt" />
    <Button android:id="@id/fragment_lookup_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/search" style="@style/IgGreenButtonStyleLarge" />
    <TextView android:id="@id/fragment_lookup_password_recovery_textview_email_sent" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/email_sent" style="@style/SignupFormText" />
</LinearLayout>