<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/metadata_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="top" android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="10.0dip" android:text="@string/please_choose_how_you_would_like_to_reset_your_password" style="@style/SignupFormText" />
        <TextView android:id="@id/fragment_forgot_password_email_username" android:background="@drawable/input_top" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/username_or_email" android:drawableLeft="@drawable/accounts_glyph_username_default" style="@style/ButtonWithGylphAlt" />
        <TextView android:id="@id/fragment_forgot_password_facebook" android:background="@drawable/input_bottom" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/reset_using_facebook" android:drawableLeft="@drawable/upload_glyph_facebook_default" style="@style/ButtonWithGylphAlt" />
        <com.instagram.android.widget.FreightSanBoldSCTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/edittext_glyph_inset_left" android:layout_marginTop="15.0dip" android:layout_marginBottom="5.0dip" android:text="@string/other_issues" style="@style/LoginSubtitle" />
        <TextView android:id="@id/fragment_forgot_password_help_center" android:background="@drawable/input_single" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/instagram_help_center" android:drawableLeft="@drawable/accounts_glyph_helpcenter" style="@style/ButtonWithGylphAlt" />
    </LinearLayout>
</ScrollView>