<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/metadata_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/edit_profile_fields" android:padding="@dimen/form_padding" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:id="@id/full_name" android:background="@drawable/input_top" android:nextFocusDown="@id/username" android:hint="@string/name" android:drawableLeft="@drawable/accounts_glyph_name_default" android:inputType="textNoSuggestions" android:imeOptions="actionNext" style="@style/FieldWithGlyph" />
        <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:id="@id/username" android:background="@drawable/input_middle" android:nextFocusDown="@id/website" android:hint="@string/username" android:capitalize="none" android:drawableLeft="@drawable/accounts_glyph_username_default" android:inputType="textEmailAddress" android:imeOptions="actionNext" style="@style/FieldWithGlyph" />
            <com.instagram.android.widget.IgSmallLoadingSpinner android:layout_gravity="right|center" android:id="@id/username_spinner" android:visibility="gone" android:layout_width="25.0dip" android:layout_height="25.0dip" android:layout_marginRight="10.0dip" />
        </FrameLayout>
        <EditText android:id="@id/website" android:background="@drawable/input_middle" android:nextFocusDown="@id/bio" android:hint="@string/website" android:drawableLeft="@drawable/accounts_glyph_website" android:inputType="textUri" android:imeOptions="actionNext" style="@style/FieldWithGlyph" />
        <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <EditText android:id="@id/bio" android:background="@drawable/input_bottom" android:paddingLeft="@dimen/edittext_glyph_padding_left" android:paddingTop="12.0dip" android:paddingRight="@dimen/edittext_glyph_padding_right" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/bio" android:maxLength="150" android:capitalize="sentences" android:inputType="textCapSentences|textMultiLine" />
            <ImageView android:layout_gravity="top|left|center" android:background="@drawable/accounts_glyph_about" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/edittext_glyph_inset_left" android:layout_marginTop="10.0dip" />
        </FrameLayout>
        <FrameLayout android:paddingTop="@dimen/form_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:textSize="18.0sp" android:gravity="center_vertical" android:id="@id/change_password_button" android:background="@drawable/input_single" android:text="@string/change_password" android:drawableLeft="@drawable/accounts_glyph_password_default" style="@style/FieldWithGlyph" />
            <ImageView android:layout_gravity="right|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:src="@drawable/list_tappable" />
        </FrameLayout>
        <FrameLayout android:paddingTop="@dimen/form_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18.0sp" android:background="@drawable/input_single" android:text="@string/posts_are_private" style="@style/FieldWithoutGlyph" />
            <com.instagram.android.widget.IndeterminateCheckBox android:layout_gravity="right|center" android:id="@id/privacy_check_box" android:background="@drawable/checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="10.0dip" android:button="@null" />
        </FrameLayout>
        <TextView android:id="@id/row_text_textview" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/toggle_privacy_help" style="@style/FormSubtitle" />
        <com.instagram.android.widget.FreightSanBoldSCTextView android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/edittext_glyph_inset_left" android:layout_marginTop="10.0dip" android:layout_marginBottom="5.0dip" android:text="@string/private_information" style="@style/LoginSubtitle" />
        <EditText android:id="@id/email" android:background="@drawable/input_top" android:hint="@string/email" android:drawableLeft="@drawable/accounts_glyph_email_default" android:inputType="textEmailAddress" android:imeOptions="actionNext" style="@style/FieldWithGlyph" />
        <EditText android:id="@id/phone" android:background="@drawable/input_middle" android:hint="@string/phone" android:drawableLeft="@drawable/accounts_glyph_phone_default" android:inputType="phone" android:imeOptions="actionDone" style="@style/FieldWithGlyph" />
        <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Spinner android:id="@id/gender" android:background="@drawable/input_bottom" android:paddingLeft="@dimen/edittext_glyph_padding_left" android:paddingTop="12.0dip" android:paddingRight="@dimen/edittext_glyph_padding_right" android:paddingBottom="12.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" />
            <ImageView android:layout_gravity="left|center" android:background="@drawable/accounts_glyph_gender" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/edittext_glyph_inset_left" />
        </FrameLayout>
        <Button android:id="@id/save_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/crop_text_save" style="@style/IgGreenButtonStyleLarge" />
    </LinearLayout>
</ScrollView>