<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/metadata_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:id="@id/edit_profile_fields" android:padding="@dimen/form_padding" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <EditText android:id="@id/current_password" android:background="@drawable/input_single" android:nextFocusDown="@id/new_password" android:hint="@string/current_password" android:drawableLeft="@drawable/accounts_glyph_password_default" android:inputType="textPassword" android:imeOptions="actionNext" style="@style/FieldWithGlyph" />
        <EditText android:id="@id/new_password" android:background="@drawable/input_top" android:nextFocusDown="@id/confirm_new_password" android:layout_marginTop="@dimen/form_padding" android:hint="@string/new_password" android:drawableLeft="@drawable/accounts_glyph_password_default" android:inputType="textPassword" android:imeOptions="actionNext" style="@style/FieldWithGlyph" />
        <EditText android:id="@id/confirm_new_password" android:background="@drawable/input_bottom" android:hint="@string/new_password_again" android:drawableLeft="@drawable/accounts_glyph_password_default" android:inputType="textPassword" android:imeOptions="actionDone" style="@style/FieldWithGlyph" />
        <Button android:enabled="false" android:id="@id/save_button" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/crop_text_save" style="@style/IgGreenButtonStyleLarge" />
    </LinearLayout>
</ScrollView>