<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/facebook_background" android:paddingLeft="15.0dip" android:paddingRight="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="#ff333333" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="15.0dip" android:text="@string/share_likes_on_facebook" android:shadowColor="#ffffffff" android:shadowDx="0.0" android:shadowDy="1.0" android:shadowRadius="0.1" />
    <TextView android:textSize="14.0sp" android:textColor="#ff333333" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25.0dip" android:text="@string/facebook_explanation_pt1" android:singleLine="false" />
    <TextView android:textSize="14.0sp" android:textColor="#ff333333" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/facebook_explanation_pt2" android:singleLine="false" />
    <LinearLayout android:background="@drawable/facebook_preview" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/facebook_example_profile" />
        <TextView android:textColor="#ff333333" android:id="@id/layout_facebook_opengraph_textview_sameple" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="Johhny Appleseed liked a photo on Instagram" android:singleLine="false" />
    </LinearLayout>
    <TextView android:textSize="14.0sp" android:textColor="#ff999999" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="20.0dip" android:text="@string/facebook_settings_message" android:singleLine="false" />
    <LinearLayout android:gravity="right" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip">
        <Button android:textColor="#ff000000" android:id="@id/layout_facebook_opengraph_button_no" android:background="@drawable/facebook_button_no_background" android:layout_width="wrap_content" android:layout_height="40.0dip" android:layout_marginRight="5.0dip" android:minWidth="60.0dip" android:text="@string/no" android:shadowColor="#ffffffff" android:shadowDx="0.0" android:shadowDy="1.0" android:shadowRadius="0.1" />
        <Button android:textColor="@color/white" android:id="@id/layout_facebook_opengraph_button_yes" android:background="@drawable/facebook_button_yes_background" android:layout_width="wrap_content" android:layout_height="40.0dip" android:minWidth="80.0dip" android:text="@string/yes" android:shadowColor="#ff274280" android:shadowDx="0.0" android:shadowDy="-1.0" android:shadowRadius="0.1" />
    </LinearLayout>
</LinearLayout>