<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip">
        <FrameLayout android:background="@drawable/edusheet_header_background" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <com.instagram.android.widget.FreightSanBoldSCTextView android:gravity="center_vertical" android:layout_gravity="center_vertical" android:paddingLeft="0.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/photo_map" style="@style/IgActionBarTitleText" />
        </FrameLayout>
        <ScrollView android:background="@drawable/edusheet_content_background" android:layout_width="fill_parent" android:layout_height="0.0px" android:layout_weight="1.0">
            <LinearLayout android:scrollbarAlwaysDrawVerticalTrack="true" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <FrameLayout android:layout_width="fill_parent" android:layout_height="85.0dip" android:layout_marginBottom="10.0dip">
                    <ImageView android:layout_width="fill_parent" android:layout_height="85.0dip" android:src="@drawable/map_preview" android:scaleType="fitXY" />
                    <View android:background="@drawable/avatar_overlay" android:layout_width="fill_parent" android:layout_height="fill_parent" />
                </FrameLayout>
                <com.instagram.android.widget.FreightSanBoldSCTextView android:textStyle="bold" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="@string/popup_photomaps_confirm_geotag_headerliner" style="@style/IgPopupHeaderText" />
                <View android:background="@drawable/edusheet_item_separator" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:layout_marginBottom="10.0dip" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/popup_photomaps_empty_map_line_1" style="@style/IgPopupBodyText" />
                <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/popup_photomaps_empty_map_line_2" style="@style/IgPopupBodyText" />
            </LinearLayout>
        </ScrollView>
        <Button android:id="@id/button1" android:background="@drawable/edusheet_content_footer" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/ok" style="@style/IgGreenButtonStyleLarge" />
    </LinearLayout>
</FrameLayout>